--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "axios": "^0.27.2",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "2.8.4",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4"
   }
